--- a/potato.html
+++ b/potato.html
@@ -6,7 +6,57 @@
     <meta name="viewport" content="width=S, initial-scale=1.0">
     <title>Twice-baked Potato</title>
 </head>
+<style>
+    img {
+        height: 300px;
+        width: 500px;
+    }
+    body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    div {
+        margin-top: 10px;
+       text-align: center;
+        width: 650px;
+        height: auto;
+        border-style: solid;
+        border-width: 3px;
+        
+    }
+</style>
 <body>
     <h1>Twice-Baked Potato</h1>
+        <img src="https://img.buzzfeed.com/thumbnailer-prod-us-east-1/775ea7c424b8439f81b4f92dbe3c37e5/101potatoesfinal.jpg?resize=600:*&output-format=auto&output-quality=auto">
+    <div>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 russet potatoes</li>
+            <li>2 teaspoons olive oil</li>
+            <li>½ cup sour cream, plus more for serving</li>
+            <li>2 tablespoons unsalted butter, melted</li>
+            <li>1 teaspoon kosher salt</li>
+            <li>½ teaspoon freshly ground black pepper</li>
+            <li>1 cup shredded cheddar cheese, divided</li>
+            <li>½ cup scallions, thinly sliced, divided</li>
+            <li>2 strips bacon, cooked, crumbled</li>
+        </ul>
+        <h2>Instructions</h2>
+            <ol>
+                <li>Preheat the oven to 400˚F (200˚C).</li>
+                <li>Rub each potato with 1 teaspoon of oil, and prick the top with a fork.</li>
+                <li>Place the potatoes on a rimmed baking sheet and bake for 1 hour.</li>
+                <li>Transfer potatoes to a cutting board, and cut in half.</li>
+                <li>Using a spoon, gently scoop out the inside flesh of the potatoes and transfer to a medium bowl. Reserve the skins.</li>
+                <li>Add the sour cream, melted butter, salt, pepper, ½ of the shredded cheese, and ½ of the scallions, and combine with a hand mixer until smooth.</li>
+                <li>Use a spoon to transfer the potato mixture back into the scooped out potato skins.</li>
+                <li>Bake for 10 minutes.</li>
+                <li>Sprinkle the potatoes with remaining cheese, and bake for 5 more minutes, until the cheese is melted.</li>
+                <li>Top with sour cream, bacon, and the remaining scallions.</li>
+                <li>Enjoy!</li>
+                
+            </ol>
+
 </body>
 </html>
